# mkdocs-gemini-chatbot

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
mkdocs_gemini_chatbot/: plugin.py
mkdocs_gemini_chatbot/templates/: chatbot.css  chatbot.js
